--- a/blog.html
+++ b/blog.html
@@ -23,28 +23,26 @@
 
 <body>
 
-    <div class="container mx-auto w-full h-full  ">
+    <div class="container mx-auto w-full h-full  px-2">
         <!-- navbar start -->
-        <div class="navbar pt-5 pb-16  backdrop-blur-lg sticky top-0 z-10 px-5 lg:px-36 ">
+        <div class="navbar pt-5 pb-7 lg:pb-16  backdrop-blur-lg sticky top-0 z-10 px-1 lg:px-36 ">
             <div class="navbar-start">
 
-                <button id="blog-home" class="btn font-extrabold bg-lime-400 500 px-10">Home</button>
+                <button id="blog-home" class=" py-2 px-2 text-sm rounded-md lg:text-lg font-bold bg-lime-400  lg:px-10">Home</button>
             </div>
-            <div class="navbar-center ">
-                <div class="flex gap-x-2 items-center">
-                    <img src="./images/logo.png">
-                    <h1 class="text-xl font-bold"> Donate Bangladesh</h1>
+            <div class="navbar-center">
+                <div class="flex gap-x-1 lg:gap-x-2 items-center">
+                    <img src="./images/logo.png" class="w-5 lg:w-10">
+                    <h1 class="text-sm lg:text-xl font-bold"> Donate Bangladesh</h1>
                 </div>
             </div>
-            <div class="navbar-end">
+            <div class="navbar-end ml-2">
+              <div class="flex gap-x-1 lg:gap-x-2 items-center">
+                  <img src="./images/coin.png" class="w-5 lg:w-8">
+                  <h1 id="mainBalanceTotal" class="text-lg font-bold">9999</h1>
+              </div>
 
-
-                <div class="flex gap-x-2 items-center">
-                    <img src="./images/coin.png">
-                    <h1 class="text-lg font-bold">5500</h1>
-                </div>
-
-            </div>
+          </div>
 
         </div>
         <!-- navbar ends -->
@@ -52,32 +50,32 @@
 
 <!-- FAQ section -->
  <div class="lg:px-36 mb-10">
-    <h1 class="flex gap-x-2 items-center text-5xl font-bold mb-10">Importent FAQ <img src="./images/question.png" class="w-14" alt=""></h1>
+    <h1 class="flex gap-x-2 items-center text-2xl lg:text-5xl font-bold mb-10">Importent FAQ <img src="./images/question.png" class="w-14" alt=""></h1>
 <div class="flex flex-col gap-y-5">
     <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2"  />
-        <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
+        <div class="collapse-title text-lg lg:text-xl font-medium">What is the Document Object Model (DOM)?</div>
         <div class="collapse-content">
           <p>The Document Object Model DOM is a programming interface used to represent and interact with the structure of web documents like HTML. It connect HTML element to java script</p>
         </div>
       </div>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
-        <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
+        <div class="collapse-title text-lg lg:text-xl font-medium">How do you select an element from the DOM?</div>
         <div class="collapse-content">
           <p>I can select element by DOM using id selector , class selector , quary selector</p>
         </div>
       </div>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
-        <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
+        <div class="collapse-title text-lg lg:text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
         <div class="collapse-content">
           <p>Event delegation is a technique in the DOM where a single event listener on a parent element manages events triggered by its child elements, utilizing the event bubbling mechanism.</p>
         </div>
       </div>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" />
-        <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
+        <div class="collapse-title text-lg lg:text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
         <div class="collapse-content">
           <p>To manipulate an elements attributes and styles using the DOM .  You can employ various methods in JavaScript .</p>
         </div>
