update some error issue

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     class=" border-2 font-bold btn-color text-sm lg:text-lg rounded-xl border-gray-400 px-3  lg:px-10 py-2 lg:py-3">Donation</button>
 
                 <button id="history-btn"
-                    class="border-2 font-bold btn-color text-sm lg:text-lg rounded-xl border-gray-400 px-3  lg:px-10  lg:py-3">History</button>
+                    class="border-2 font-bold text-sm lg:text-lg rounded-xl border-gray-400 px-3  lg:px-10  lg:py-3">History</button>
             </div>
             <!-- control button ends  -->
             <!-- cards section  -->
