updated blur mood in navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container mx-auto w-full h-full ">
         <div>
             <!-- navbar start -->
-            <div class="navbar pt-5 pb-5 lg:pb-16  backdrop-blur-lg sticky top-0 z-10 px-5 lg:px-36 ">
+            <div class="navbar pt-5  sticky top-0 z-20 px-5 lg:px-36 ">
                 <div class="navbar-start">
 
                     <button id="blog" class="py-2 px-2 text-sm rounded-md lg:text-lg font-bold bg-lime-400  lg:px-10">Blog</button>
@@ -48,13 +48,13 @@
             </div>
             <!-- navbar ends -->
             <!-- control button -->
-            <div class="card-button flex justify-center gap-x-5 pt-7 px-5 lg:px-0">
+            <div class="card-button flex justify-center gap-x-5 pt-16 lg:pt-24 pb-5 lg:pb-5 px-5 lg:px-0 sticky z-10  top-0 backdrop-blur-md">
 
                 <button id="donation-btn"
                     class=" border-2 font-bold btn-color text-sm lg:text-lg rounded-xl border-gray-400 px-3  lg:px-10 py-2 lg:py-3">Donation</button>
 
                 <button id="history-btn"
-                    class="border-2 font-bold text-sm lg:text-lg rounded-xl border-gray-400 px-3  lg:px-10  lg:py-3">History</button>
+                    class="border-2 font-bold  text-sm lg:text-lg rounded-xl border-gray-400 px-3  lg:px-10  lg:py-3">History</button>
             </div>
             <!-- control button ends  -->
             <!-- cards section  -->
